--- a/src/template/index.html
+++ b/src/template/index.html
@@ -17,11 +17,22 @@
         <li class="page-item disabled">
           <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
         </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item active" aria-current="page">
-          <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        {% for i in range(1, page_quantity + 1) %}
+          {% if i == page_no %}
+            <li class="page-item active" aria-current="page">
+              <span class="page-link">
+                {{i}}
+                <span class="sr-only">(current)</span>
+              </span>
+            </li>
+          {% else %}
+            <li class="page-item"><a class="page-link" href="index{{i}}.html">{{i}}</a></li>
+          {% endif %}
+        {% endfor %}
+<!--        <li class="page-item active" aria-current="page">-->
+<!--          <a class="page-link" href="#">2 </a>-->
+<!--        </li>-->
+<!--        <li class="page-item"><a class="page-link" href="#">3</a></li>-->
         <li class="page-item">
           <a class="page-link" href="#">Next</a>
         </li>
