--- a/src/template/index.html
+++ b/src/template/index.html
@@ -14,9 +14,10 @@
   <body>
     <nav aria-label="...">
       <ul class="pagination">
-        <li class="page-item disabled">
-          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+        <li class="page-item {% if page_no == 1 %}disabled{% endif %}">
+          <a class="page-link" href="index{{page_no - 1}}.html">Назад</a>
         </li>
+
         {% for i in range(1, page_quantity + 1) %}
           {% if i == page_no %}
             <li class="page-item active" aria-current="page">
@@ -29,12 +30,9 @@
             <li class="page-item"><a class="page-link" href="index{{i}}.html">{{i}}</a></li>
           {% endif %}
         {% endfor %}
-<!--        <li class="page-item active" aria-current="page">-->
-<!--          <a class="page-link" href="#">2 </a>-->
-<!--        </li>-->
-<!--        <li class="page-item"><a class="page-link" href="#">3</a></li>-->
-        <li class="page-item">
-          <a class="page-link" href="#">Next</a>
+
+        <li class="page-item {% if page_no == page_quantity %}disabled{% endif %}">
+          <a class="page-link" href="index{{page_no + 1}}.html">Вперед</a>
         </li>
       </ul>
     </nav>
