--- a/src/template/index.html
+++ b/src/template/index.html
@@ -50,6 +50,11 @@
                     <h4 class="card-title">{{book.title}}</h4>
                     <p class="card-text">{{book.author}}</p>
                     <p class="card-text">
+                      {% for category in book.genres %}
+                        <span class="badge badge-light">{{category}}</span>
+                      {% endfor %}
+                    </p>
+                    <p class="card-text">
                       <small class="text-muted"><a href="{{book.book_path}}" target="_blank">Читать</a></small>
                     </p>
                   </div>
